--- a/ckanext/relation/templates/package/snippets/marker.html
+++ b/ckanext/relation/templates/package/snippets/marker.html
@@ -1,6 +1,6 @@
 {% set package = package %} 
-{# {% set count = h.get_allowable_children_groups_g('main-categories') %}
-{% set main_group = h.get_selected_group(package.groups, 'main-categories') %} #}
+{% set count = h.get_allowable_children_groups('main-categories') %}
+{% set main_group = h.get_selected_group(package.groups, 'main-categories') %}
 
 {% set type = 'asset' if h.ckan_version().split('.')|map('int')|list >= [2, 9, 0] else 'resource' %}
 {% include 'snippets/relation_css_' ~ type ~ '.html' %}
