--- a/ckanext/relation/templates/package/snippets/data_relation_fields.html
+++ b/ckanext/relation/templates/package/snippets/data_relation_fields.html
@@ -1,6 +1,6 @@
 {% import 'macros/form.html' as form %}
 
-{% set pkg = c.pkg_dict %}
+{% set pkg = g.pkg_dict %}
 {% set action = form_action or h.url_for(c.link) %}
 {% set placeholder = _('Search resources...') %}
 
@@ -34,17 +34,16 @@
  <section class="module-content">
  {% block search_input %}
 
-
 <form {% if form_id %}id="{{ form_id }}1" {% endif %}class="search-form{% if no_bottom_border %} no-bottom-border{% endif %}" method="get" data-module="select-switch">
   {{ h.csrf_input() if 'csrf_input' in h }}
     <div >
       {% block form %}
         {% set facets = {
-          'fields': c.fields_grouped,
-          'search': c.search_facets,
-          'titles': c.facet_titles,
-          'translated_fields': c.translated_fields,
-          'remove_field': c.remove_field }
+          'fields': g.fields_grouped,
+          'search': g.search_facets,
+          'titles': gfacet_titles,
+          'translated_fields': g.translated_fields,
+          'remove_field': g.remove_field }
         %}
         {% set sorting = [
           (_('Relevance'), 'score desc, metadata_modified desc'),
@@ -59,14 +58,17 @@
       <input aria-label="{% block header_site_search_label %}{{ placeholder }}{% endblock %}" id="{{ field_search }}" type="text" class="form-control input-lg" name="q" value="{{ query }}" autocomplete="on" placeholder="{{ placeholder }}">
       {% block search_input_button %}
       <span class="input-group-btn">
-        <button class="btn btn-default btn-lg" type="submit" >
+        <button class="btn btn-default btn-lg" type="submit" value="search" aria-label="{{_('Submit')}}">
           <i class="fa fa-search"></i>
         </button>
       </span>
       </div>
       {% endblock %} 
           </div>
-	{% if request.params %}
+
+
+	{% if request.args %}
+
 {% block package_search_results_list %}  
        <div id="{{ target }}" class="collapse show scroll"> 
 <table class="table table-striped table-bordered table-condensed">
@@ -80,7 +82,7 @@
         </tr>
       </thead>
       <tbody>
-	{% for depcy in h.package_all(request.params) %}
+	{% for depcy in h.package_all(request.args) %}
         {% set org = depcy.organization %}
 		{#% if depcy.id != pkg.id %#}
         {% if org %}
