--- a/ckanext/relation/templates/package/snippets/edit_form.html
+++ b/ckanext/relation/templates/package/snippets/edit_form.html
@@ -48,7 +48,7 @@
      <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#{{ ref_id }}">
+          <a data-bs-toggle="collapse" data-parent="#accordion" href="#{{ ref_id }}">
             <span class="fa fa-link text-success"></span> {{ _('Add Relationship') }}
             <span class="glyphicon glyphicon-chevron-down pull-right"></span>
           </a>
@@ -57,7 +57,7 @@
       <div id="{{ ref_id }}" class="panel-collapse collapse">
         <div class="panel-body">
 		
-		{% if request.params %}
+		{% if request.args %}
 {% block package_search_results_list %}  
     
 <table class="table table-striped table-bordered table-condensed">
@@ -73,7 +73,7 @@
       </thead>
       <tbody>
 	  
-	{% for depcy1 in h.package_all(request.params) %}
+	{% for depcy1 in h.package_all(request.args) %}
 	{% if depcy1.id != pkg.id %}
         {% set org1 = depcy1.organization %}
 		{#% if pkg.private and pkg.organization == org1 %#}
