--- a/ckanext/relation/templates/package/snippets/data_relation_fields.html
+++ b/ckanext/relation/templates/package/snippets/data_relation_fields.html
@@ -41,7 +41,7 @@
         {% set facets = {
           'fields': g.fields_grouped,
           'search': g.search_facets,
-          'titles': gfacet_titles,
+          'titles': g.facet_titles,
           'translated_fields': g.translated_fields,
           'remove_field': g.remove_field }
         %}
