Panel Heading style fix

--- a/ckanext/relation/templates/package/snippets/relation_list.html
+++ b/ckanext/relation/templates/package/snippets/relation_list.html
@@ -40,7 +40,7 @@
     <div class="panel panel-primary">
       <div class="panel-heading" style="background-color: #0065bd; border-color: #0065bd;">{% trans %}Connected Resources - Click on a node to go to that resource page.{% endtrans %}</div>
       <div class="panel-body">
-        <div id="cy" style="width: 600px; height: 400px;"></div>
+        <div id="cy"></div>
       </div>
     </div>
     <!-- graph : end -->
