--- a/ckanext/relation/templates/package/snippets/relation_list.html
+++ b/ckanext/relation/templates/package/snippets/relation_list.html
@@ -450,7 +450,7 @@ var relations = {{ graph_nodes |tojson }};
   };
 
     cy.layout({
-      name: 'concentric',
+      name: 'dagre',
   });
   
     //cy.fit(cy.elements(), 2);
